--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,5 +34,5 @@ jobs:
       with:
         upload_url: ${{ github.event.release.upload_url }} 
         asset_path: ./bin/${{ github.event.release.tag_name }}_${{ matrix.os }}_${{ matrix.arch }}
-        asset_name: ${{ github.event.repository.name }}_${{ github.event.release.tag_name }}_${{ matrix.os }}_${{ matrix.arch }}
+        asset_name: ${{ github.event.repository.name }}-${{ github.event.release.tag_name }}.${{ matrix.os }}-${{ matrix.arch }}
         asset_content_type: application/octet-stream       
